# Rhumb

./: .env.example  .gitignore  COMPLIANCE.md  LICENSE  README.md  SECURITY.md
agent-host/: README.md  package-lock.json  package.json
agent-host/src/: auth.ts  config.ts  env.ts  fsAtomic.ts  index.ts  prompt.ts  provider.ts  server.ts  sessionManager.ts  sessions.ts  sse.ts  types.ts  watchdog.ts
agent-host/test/: child-env.test.ts  config.test.ts  ddl-audit.test.ts  ddl-facts.test.ts  env.test.ts  fs-atomic.test.ts  identity.test.ts  index.smoke.test.ts  infra-config.test.ts  infra-enroll.test.ts  infra-executor.test.ts  infra-pending.test.ts  infra-provision.test.ts  infra-router.test.ts  infra-server.test.ts  infra-tailscale.test.ts  node-facts.test.ts  ontology-graph.test.ts  ontology-ops.test.ts  ontology-projector.test.ts  ontology-router.test.ts  ontology-vault.test.ts  pg-admin.test.ts  prompt.test.ts  provider.test.ts  server.test.ts  service-datasource.test.ts  service-deployer.test.ts  service-health.test.ts  service-manifest.test.ts  service-ops.test.ts  service-redeploy.test.ts  service-ssh.test.ts  sessionManager.test.ts  sessions.test.ts  sse.test.ts  watchdog.test.ts
client/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/src/: App.tsx  (+2 more)
client/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
client/src-tauri/src/: config.rs  discover.rs  lib.rs  proxy.rs  sse.rs
dashboard-host/: README.md  package-lock.json  package.json
docs/: positioning.md  setup-manual.md
scripts/: install.sh  setup-serve.sh
(+188 files in other folders)
