[package]
name = "app"
version = "0.1.0"
description = "Rhumb desktop client — Tauri v2 shell for the self-hosted Claude Code workspace"
authors = ["Rhumb contributors"]
license = "Apache-2.0"
repository = "https://github.com/abrunsvold/Rhumb"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3" }
tauri-plugin-log = "2"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures-util = "0.3"
